2008-04-16  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Clarification: PEP is enabled in default config

2008-04-14  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_caps.erl: Cache negative response (EJAB-474)

2008-04-12  Badlop  <badlop@process-one.net>

	* src/web/ejabberd_web_admin.erl: Include Last-Modified HTTP
	header in responses to allow caching (EJAB-546)

2008-04-11  Badlop  <badlop@process-one.net>

	* src/Makefile.in: Improved indentation of GCC call
	* src/ejabberd_zlib/Makefile.in: Likewise
	* src/mod_irc/Makefile.in: Likewise
	* src/stringprep/Makefile.in: Likewise
	* src/tls/Makefile.in: Likewise

	* src/ejabberd_listener.erl (start_listener): Revert SVN r1260.

2008-04-11  Alexey Shchepin  <alexey@process-one.net>

	* src/ejabberd_config.erl: Removed a dependency on string:to_upper

	* src/tls/tls_drv.c: Fixed gcc signedness warnings (EJAB-447)
	* src/ejabberd_zlib/ejabberd_zlib_drv.c: Likewise

	* src/expat_erl.c: Removed R9B workaround (EJAB-447)

2008-04-10  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: fix identity and database update
	bugfix
	* src/mod_pubsub/nodetree_default.erl: Likewise

2008-04-10  Mickael Remond  <mremond@process-one.net>

	* src/ejabberd_c2s.erl: Uniform default value for empty privacy
	list. Fixes (EJAB-603).

2008-04-08  Badlop  <badlop@process-one.net>

	* src/ejabberd_auth_ldap.erl: LDAP function to get the number of
	registered users is too slow (EJAB-331): set timeout in LDAP
	search queries (thanks to Evgeniy Khramtsov) and return the number
	of registered users.

2008-04-07  Mickael Remond  <mremond@process-one.net>

	* doc/guide.tex: Documented the IQ discipline {queue, N}.
	* doc/guide.html: Likewise.

2008-04-05  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Fix default_room_opts with default_room_options
	* doc/guide.html: Likewise

2008-04-04  Badlop  <badlop@process-one.net>
